<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/compare_activity">

    <Button
        android:id="@+id/HomeButton"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/home_icon"
        android:onClick="goHomePage"
        android:padding="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="52dp"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/rules_icon"
        android:onClick="showRules"
        android:padding="1dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="276dp"
        android:gravity="center"
        android:text="@string/questionNumber"
        android:textColor="@color/grey"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comparisonTextView"
        android:layout_width="307dp"
        android:layout_height="113dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumberTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="82dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comparisonTextView">

        <Button
            android:id="@+id/numberButton1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:text="@string/number1"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/numberButton2"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_background"
            android:text="@string/number2"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/correctTextView"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/correct_answer_message"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correctTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>