<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/home_page">

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="30dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/sign_out"
        android:padding="1dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/compareNumbersButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/compare_numbers"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/orderNumbersButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/order_numbers"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compareNumbersButton" />

    <Button
        android:id="@+id/composeNumbersButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/compose_numbers"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumbersButton" />
</androidx.constraintlayout.widget.ConstraintLayout>