<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ChooseLevelActivity"
    android:background="@drawable/level_page">

    <Button
        android:id="@+id/HomeButton"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/home_icon"
        android:onClick="goHomePage"
        android:padding="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="52dp"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/rules_icon"
        android:onClick="showRules"
        android:padding="1dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/easy"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/medium"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/hard"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

</androidx.constraintlayout.widget.ConstraintLayout>